--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+1/3/2017:
+	- 2.1.8 released
+
 8/13/2016:
 	- Add a Message constructor taking a ByteBuffer, and convert the
 	  DNSInput class to use a ByteBuffer internally.
